Optimize clearing reloadable flag